tests/ui/issues/issue-67535.stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/issue-67535.rs:3:1
   |
LL | impl std::ops::AddAssign for () {
   | ^^^^^-------------------^^^^^--
   |      |                       |
   |      |                       this is not defined in the current crate because tuples are always foreign
   |      this is not defined in the current crate because this is a foreign trait
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/issue-67535.rs:10:1
   |
LL | impl std::ops::AddAssign for [(); 1] {
   | ^^^^^-------------------^^^^^-------
   |      |                       |
   |      |                       this is not defined in the current crate because arrays are always foreign
   |      this is not defined in the current crate because this is a foreign trait
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/issue-67535.rs:17:1
   |
LL | impl std::ops::AddAssign for &[u8] {
   | ^^^^^-------------------^^^^^-----
   |      |                       |
   |      |                       this is not defined in the current crate because slices are always foreign
   |      this is not defined in the current crate because this is a foreign trait
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0117`.
